codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_request_permissions_clears_status_without_history.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 465
expression: "normalize_snapshot_paths(strip_racy_working_status_line(term.backend().vt100().screen().contents(),))"
---







› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
